# MonsterEngine

./: BUILD.md  CMakeLists.txt  GLFW_SETUP.md  MonsterEngine.sln  MonsterEngine.vcxproj  MonsterEngine.vcxproj.filters  OpenGLFunctions.i  README.md  compile_cube_shaders.bat  main.cpp
.cursor/rules/: monster-peoject-rule.mdc  monster_project_rules.md
Include/: CubeRenderer.h  CubeSceneApplication.h  Engine.h  TriangleRenderer.h
Include/Containers/: Array.h  BitArray.h  BitSet.h  CircularBuffer.h  ContainerAllocationPolicies.h  ContainerFwd.h  Containers.h  Deque.h  Map.h  Name.h  Queue.h  RingBuffer.h  ScriptArray.h  Set.h  SparseArray.h  StaticArray.h  String.h  Text.h
Include/Core/: Application.h  Assert.h  Color.h  CoreMinimal.h  CoreTypes.h  FGraphEvent.h  FRunnable.h  FRunnableThread.h  FTaskGraph.h  Input.h  Log.h  LogCategory.h  LogMacros.h  LogUsageExamples.h  LogVerbosity.h  Memory.h  MonsterEnginePCH.h  ShaderCompiler.h  Window.h
Include/Editor/: EditorApplication.h
Include/Engine/: Actor.h  ConvexVolume.h  LightPrimitiveInteraction.h  LightSceneInfo.h  LightSceneProxy.h  Octree.h  PrimitiveSceneInfo.h  PrimitiveSceneProxy.h  RenderCommandQueue.h  Scene.h  SceneInterface.h  SceneOctree.h  SceneRenderer.h  SceneTypes.h  SceneView.h  SceneVisibility.h
Include/Math/: Box.h  MathFunctions.h  MathFwd.h  MathUtility.h  Matrix.h  MonsterMath.h  MonsterMathFPU.h  MonsterMathSSE.h  Plane.h  Quat.h  Rotator.h  Sphere.h  Transform.h  Vector.h  Vector2D.h  Vector4.h  VectorRegister.h
Include/RDG/: RDG.h  RDGBuilder.h  RDGDefinitions.h  RDGFwd.h  RDGPass.h  RDGResource.h
Include/RHI/: FAsyncTextureUploadManager.h  FRHICommandListExecutor.h  FRHICommandListParallelTranslator.h  FRHICommandListPool.h  FRHIThread.h  FTranslatedCommandBufferCollection.h  IRHICommandList.h  IRHIDescriptorSet.h  IRHIDevice.h  IRHIResource.h  IRHISwapChain.h  MockCommandList.h  RHI.h  RHIBarriers.h  RHIDefinitions.h  RHIResources.h  ShaderPreprocessor.h
Include/Renderer/: AsyncTextureLoader.h  FAsyncTextureLoadRequest.h  FDDSTextureReader.h  FPNGTextureReader.h  FTextureFileReader.h  FTextureLoader.h  FTextureStreamingManager.h  FVirtualTextureSystem.h  ForwardRenderPasses.h  ForwardShaderCompiler.h  LightShaderParameters.h  LightUniformBuffer.h  MeshBatch.h  MeshDrawCommand.h  MeshElementCollector.h  ParallelSceneRenderer.h  RenderPass.h  RenderPasses.h  RenderQueue.h  Scene.h  SceneRenderer.h  SceneTypes.h  SceneView.h  SceneVisibility.h  ShadowDepthPass.h  ShadowProjectionPass.h  ShadowRendering.h
Include/Serialization/: Archive.h
Include/Tests/: BenchmarkParallelRendering.h  CubeSceneRendererTest.h  CubeSceneRendererTestApp.h  TestCommandListPool.h  TestMain.h  TestParallelRendering.h  TestParallelTranslator.h  TestVulkanParallelRendering.h
Include/Windows/: AllowWindowsPlatformTypes.h  HideWindowsPlatformTypes.h
Shaders/: Cube.frag  Cube.frag.spv  Cube.vert  Cube.vert.spv  CubeLit.frag  CubeLit.frag.spv  CubeLit.vert  CubeLit.vert.spv  CubeLitShadow.frag  CubeLitShadow.frag.spv  CubeLitShadow.vert  CubeLitShadow.vert.spv  CubeLitShadow_GL.frag  CubeLitShadow_GL.vert  CubeLit_GL.frag  CubeLit_GL.vert  Cube_GL.frag  Cube_GL.vert  ImGui.frag  ImGui.frag.spv  ImGui.vert  ImGui.vert.spv  ImGui_GL.frag  ImGui_GL.vert  README.md  Triangle.frag  Triangle.frag.spv  Triangle.hlsl  Triangle.vert  Triangle.vert.spv  compile_shaders.bat
Shaders/Common/: BRDF.glsl  Common.glsl  LightingCommon.glsl  ShadingModels.glsl  ShadowCommon.glsl
Shaders/Forward/: DepthOnly.frag  DepthOnly.frag.spv  DepthOnly.vert  DepthOnly.vert.spv  ForwardLit.frag  ForwardLit.frag.spv  ForwardLit.vert  ForwardLit.vert.spv  ShadowDepth.frag  ShadowDepth.frag.spv  ShadowDepth.vert  ShadowDepth.vert.spv  ShadowProjection.frag  ShadowProjection.frag.spv  ShadowProjection.vert  ShadowProjection.vert.spv  ShadowProjection_GL.frag  ShadowProjection_GL.vert  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv
Shaders/Lighting/: BasicLit.frag  BasicLit.frag.spv  BasicLit.vert  BasicLit.vert.spv
Shaders/Material/: DefaultMaterial.frag  DefaultMaterial.frag.spv  DefaultMaterial.vert  DefaultMaterial.vert.spv
Shaders/PBR/: BRDF.glsl  PBR.frag  PBR.frag.spv  PBR.vert  PBR.vert.spv  PBR_GL.frag  PBR_GL.vert  StandardPBR.frag  StandardPBR.frag.spv  StandardPBR.vert  StandardPBR.vert.spv  StandardPBR_GL.frag  (+2 more)
Source/: BenchmarkParallelRendering.cpp  CubeApplication.cpp  CubeRenderer.cpp  CubeSceneApplication.cpp  CubeSceneApplicationPBR.cpp  Engine.cpp  ImGuiTestApplication.cpp  MemorySystemTest.cpp  ParallelRenderingIntegrationExample.cpp  ParallelRenderingTestMain.cpp  RunParallelRenderingTest.cpp  TestCommandListPool.cpp  TestCommandListPoolMain.cpp  TestMain.cpp  TestParallelCommandBufferExecution.cpp  TestParallelTranslator.cpp  TestRHIThread.cpp  TestTaskGraph.cpp  TestVulkanParallelRendering.cpp  TriangleApplication.cpp  TriangleRenderer.cpp
devDocument/: 2026-04-15-descriptor-set-linear-flatten-design.md  2026-04-15-descriptor-set-linear-flatten-plan.md  2026-04-16-vulkan-descriptor-set-architecture-fix.md  3D_Tiles场景加载问题排查指南.md  3D_Tiles渲染性能优化_面条准备.md  Blog-Vulkan 入门：实现一个带纹理的旋转立方体 - 副本.md  Blog-Vulkan 入门：实现一个带纹理的旋转立方体.md  CubeRenderer实现文档.md  CubeRenderingPipeline.md  Cube渲染流程_详细图解.md  Cube渲染流程架构文档-Blog (2).md  Cube渲染流程架构文档-Blog.md  Cube渲染流程架构文档.md  DocumentIndex.md  FMemory_Quick_Start.md  FMemory_System_Guide.md  GPU内存管理系统_完成报告.md  IMPLEMENTATION_SUMMARY.md  LoggingSystem.md  MonsterRender_一年开发计划.md  NextSteps_Triangle_Rendering.md  OpenGL_RHI开发说明.md  OpenGL_Vulkan_RHI对比开发说明.md  PBR_Helmet_Rendering开发文档.md  ParallelRenderingIntegrationProgress.md  Phase1-2-Summary.md  QuickReference_VulkanRHICommandList.md  RDG系统开发文档-总览.md  RDG系统开发文档-第1部分-概述和架构.md  RDG系统开发文档-第2部分-核心组件.md  RDG系统开发文档-第3部分-API和实现.md  RDG系统开发文档-第4部分-优化和调试.md  README.md  README_资源管理层.md  SHADER_BINDING_REFACTOR_README.md  Scene系统重构计划.md  ShadowMapping_Development_Guide.md  Texture_Streaming_Quick_Start.md  Texture_Streaming_System_Guide.md  VulkanRHICommandList_Implementation_Summary-中文.md  (+47 more)
docs/: RuntimeLibraryFix.md  引擎的架构和设计.md
(+301 files in other folders)
